--- a/index.html
+++ b/index.html
@@ -4,9 +4,24 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hello World</title>
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
   <h1>Falling Web</h1>
   <p>Nice to meet you.</p>
+  <div class="demos">
+    <div class="card">
+      <a href="./Projects/Expanding Cards/index.html">Expanding Cards</a>
+    </div>
+    <div class="card"></div>
+    <div class="card"></div>
+    <div class="card"></div>
+    <div class="card"></div>
+    <div class="card"></div>
+    <div class="card"></div>
+    <div class="card"></div>
+    <div class="card"></div>
+  </div>
 </body>
+<script src="./js/script.js"></script>
 </html>
