--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
   <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-  <h1>Falling Web</h1>
+  <h1 class="title">Falling Web</h1>
+  <div class="line"></div>
   <p>Nice to meet you.</p>
   <div class="demos">
     <div class="card">
       <a href="./Projects/Expanding Cards/index.html">Expanding Cards</a>
     </div>
-    <div class="card"></div>
+    <div class="card">
+      <a href="./Projects/Progress-steps/index.html">Progress Steps</a>
+    </div>
     <div class="card"></div>
     <div class="card"></div>
     <div class="card"></div>
