--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     <div class="card">
       <a href="./Projects/Progress-steps/index.html">Progress Steps</a>
     </div>
-    <div class="card"></div>
+    <div class="card">
+      <a href="./Projects/Rotating-nav-animation/index.html">Rotating</a>
+    </div>
     <div class="card"></div>
     <div class="card"></div>
     <div class="card"></div>
