--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
     <div class="card">
       <a href="./Projects/Rotating-nav-animation/index.html">Rotating</a>
     </div>
-    <div class="card"></div>
+    <div class="card">
+      <a href="./Projects/Hidden-search/index.html">Search-Box</a>
+    </div>
     <div class="card"></div>
     <div class="card"></div>
     <div class="card"></div>
