--- a/index.html
+++ b/index.html
@@ -11,23 +11,12 @@
   <div class="line"></div>
   <p>Nice to meet you.</p>
   <div class="demos">
-    <div class="card">
-      <a href="./Projects/Expanding Cards/index.html">Expanding Cards</a>
-    </div>
-    <div class="card">
-      <a href="./Projects/Progress-steps/index.html">Progress Steps</a>
-    </div>
-    <div class="card">
-      <a href="./Projects/Rotating-nav-animation/index.html">Rotating</a>
-    </div>
-    <div class="card">
-      <a href="./Projects/Hidden-search/index.html">Search-Box</a>
-    </div>
-    <div class="card"></div>
-    <div class="card"></div>
-    <div class="card"></div>
-    <div class="card"></div>
-    <div class="card"></div>
+    <ul>
+      <li><a href="./Projects/Expanding Cards/index.html">Expanding Cards</a></li>
+      <li><a href="./Projects/Progress-steps/index.html">Progress Steps</a></li>
+      <li><a href="./Projects/Rotating-nav-animation/index.html">Rotating</a></li>
+      <li><a href="./Projects/Hidden-search/index.html">Search-Box</a></li>
+    </ul>
   </div>
 </body>
 <script src="./js/script.js"></script>
