--- a/index.html
+++ b/index.html
@@ -1,25 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta name="description" content="FallingSakura's Web
-  Share Everything. Hello World!">
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hello World</title>
-  <link rel="stylesheet" href="./css/style.css">
-</head>
-<body>
-  <h1 class="title">Falling Web</h1>
-  <div class="line"></div>
-  <p>Nice to meet you.</p>
-  <div class="demos">
-    <ul>
-      <li><a href="./Projects/Expanding Cards/index.html">Expanding Cards</a></li>
-      <li><a href="./Projects/Progress-steps/index.html">Progress Steps</a></li>
-      <li><a href="./Projects/Rotating-nav-animation/index.html">Rotating</a></li>
-      <li><a href="./Projects/Hidden-search/index.html">Search-Box</a></li>
-    </ul>
-  </div>
-</body>
-<script src="./js/script.js"></script>
+  <head>
+    <meta charset="UTF-8">
+    <link rel="icon" href="/favicon.ico">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Vite App</title>
+  </head>
+  <body>
+    <div id="app"></div>
+    <script type="module" src="/src/main.js"></script>
+  </body>
 </html>
